add asuc test and transition buttons

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -3,8 +3,11 @@
 </div>
 <div id="{{ figure_id }}_options">
   <button type="button" class="download btn btn-primary">Save JSON</button>
-  <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes</button>
+  <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes </button>
   <button type="button" class="svgbutton btn btn-info ">Download SVG</button>
+  <button type="button" class="path_button btn btn-warning ">Select Path</button>
+  <button type="button" class="marker_button btn btn-warning ">Select Marker</button>
+  <button type="button" class="reset_button btn btn-warning ">Reset</button>
 </div>
 <script type="text/Javascript">
 {{ javascript_source }}
