debug graph structure

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -10,6 +10,10 @@
   <button type="button" class="reset_button btn btn-warning ">Reset</button>
   <button type="button" class="animate_button btn btn-warning ">Show Path</button>
 </div>
+<div>
+  <input type="text">
+  <button type="button" class="test_button btn btn-test ">Alg Test</button>
+</div>
 <script type="text/Javascript">
 {{ javascript_source }}
 </script>
