feat: node selection information

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -8,12 +8,17 @@
   <button type="button" class="path_button btn btn-warning ">Select Path</button>
   <button type="button" class="marker_button btn btn-warning ">Select Marker</button>
   <button type="button" class="reset_button btn btn-warning ">Reset</button>
-  <button type="button" class="animate_button btn btn-warning ">Show Path</button>
-</div>
-<div>
-  <input type="text">
   <button type="button" class="test_button btn btn-test ">Alg Test</button>
+  <br/>
+
+  <div>
+      <form>
+        <input id="info" type="text" value="10">
+        <button type="button" class="animate_button btn btn-warning ">Show Path</button>
+      </form>
+    </div>
 </div>
+
 <script type="text/Javascript">
 {{ javascript_source }}
 </script>
