--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -1,23 +1,75 @@
-<div id="{{ figure_id }}">
-  {{ background_svg }}
-</div>
-<div id="{{ figure_id }}_options">
-  <button type="button" class="download btn btn-primary">Save JSON</button>
-  <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes </button>
-  <button type="button" class="svgbutton btn btn-info ">Download SVG</button>
-  <button type="button" class="path_button btn btn-warning ">Select Path</button>
-  <button type="button" class="marker_button btn btn-warning ">Select Marker</button>
-  <button type="button" class="reset_button btn btn-warning ">Reset</button>
-  <button type="button" class="test_button btn btn-test ">Alg Test</button>
+<div class="container">
+  <div class="row row-offcanvas row-offcanvas-right">
 
+      <div class="navbar navbar-static-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+              <i class="fa fa-comments-o"></i>
+              VisMap
+            </a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="/">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+              <li><a href="/">Document</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="/login">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-  <div>
-      <form>
-        <input id="info" type="text" value="10">
-        <button type="button" class="animate_button btn btn-warning ">Downstream Nodes</button>
-      </form>
+    <div class="col-xs-12 col-sm-9">
+      <div id="{{ figure_id }}">
+        {{ background_svg }}
+      </div>
     </div>
+
+    <div id="{{ figure_id }}_options" class="col-xs-6 col-sm-3 sidebar-offcanvas">
+        <div class="btn-group-vertical" role="group" aria-label="btn-group-vertical">
+            <button type="button" class="download btn btn-primary ">Save JSON</button>
+            <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes </button>
+            <button type="button" class="svgbutton btn btn-info ">Download SVG</button>
+            <button type="button" class="path_button btn btn-warning ">Select Path</button>
+            <button type="button" class="marker_button btn btn-warning ">Select Marker</button>
+            <button type="button" class="reset_button btn btn-warning ">Reset</button>
+            <button type="button" class="test_button btn btn-test ">Alg Test</button>
+            <form>
+                <input id="info" type="text" value="">
+                <button type="button" class="animate_button btn btn-warning ">Downstream Nodes</button>
+              </form>
+        </div>
+      </div><!--/.sidebar-offcanvas-->
+
+    <!-- <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+        <div class="list-group">
+          <li class="list-group-item active">External Links</li>
+          <a href="http://bigg.ucsd.edu/" target="_blank" class="list-group-item">BiGG</a>
+          <a href="https://opencobra.github.io/" target="_blank" class="list-group-item">Open Cobra</a>
+          <a href="https://d3js.org/" target="_blank" class="list-group-item">D3.js</a>
+          <a href="#" class="list-group-item">...</a>
+          <a href="#" class="list-group-item">...</a>
+          <a href="#" class="list-group-item">...</a>
+          <a href="#" class="list-group-item">...</a>
+          <a href="#" class="list-group-item">...</a>
+          <a href="https://getbootstrap.com/" target="_blank" class="list-group-item">Bootstrap</a>
+        </div>
+      </div> -->
+      <!--.sidebar-offcanvas-->
+
+  </div>
 </div>
+
 
 <script type="text/Javascript">
 {{ javascript_source }}
