add pentose model

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -44,6 +44,7 @@
             <button type="button" class="marker_button btn btn-warning ">Select Marker</button>
             <button type="button" class="reset_button btn btn-warning ">Reset</button>
             <button type="button" class="test_button btn btn-test ">Alg Test</button>
+            <button type="button" class="test_button btn btn-test ">Search</button>
             <form>
                 <input id="info" type="text" value="">
                 <button type="button" class="animate_button btn btn-warning ">Downstream Nodes</button>
