--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -29,13 +29,18 @@
         </div>
       </div>
 
-    <div class="col-xs-12 col-sm-9">
+    <div class="row">
+    <!-- <div class="col-xs-12 col-sm-9"> -->
+    <div class="col-md-10" >
+
       <div id="{{ figure_id }}">
         {{ background_svg }}
       </div>
     </div>
 
-    <div id="{{ figure_id }}_options" class="col-xs-6 col-sm-3 sidebar-offcanvas">
+    <!-- <div id="{{ figure_id }}_options" class="col-xs-6 col-sm-3 sidebar-offcanvas"> -->
+    <div id="{{ figure_id }}_options" class="col-md-2">
+
         <div class="btn-group-vertical" role="group" aria-label="btn-group-vertical">
             <button type="button" class="download btn btn-primary ">Save JSON</button>
             <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes </button>
@@ -46,11 +51,13 @@
             <button type="button" class="test_button btn btn-test ">Alg Test</button>
             <button type="button" class="test_button btn btn-test ">Search</button>
             <form>
-                <input id="info" type="text" value="">
+                <input id="info" type="text" value=""/>
                 <button type="button" class="animate_button btn btn-warning ">Downstream Nodes</button>
-              </form>
+                <p><input type="checkbox" name="vehicle" value="" />Reversibility</p>
+            </form>
         </div>
       </div><!--/.sidebar-offcanvas-->
+      </div> <!-- row -->
 
     <!-- <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
         <div class="list-group">
@@ -74,5 +81,3 @@
 <script type="text/Javascript">
 {{ javascript_source }}
 </script>
-
-
