--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -64,7 +64,7 @@
 
           <h4>Search</h4>
           <input type="text" class="form-control" id="search" placeholder="Name or id" type="text" value="">
-          <button type="button" class="test_button btn btn-test ">Search Node</button>
+          <button type="button" class="test_button btn btn-danger ">Search Node</button>
 
           <h4>Custom</h4>
           <button type="button" class="reactionbutton btn btn-success ">Show Reaction Nodes </button>
@@ -72,7 +72,15 @@
           <button type="button" class="path_button btn btn-warning ">Path Color</button>
           <!-- <button type="button" class="marker_button btn btn-warning ">Select Marker</button> -->
           <button type="button" class="reset_button btn btn-warning ">Reset</button>
+          <button id="zoom_in" type="button" class="zoom_button btn">Zoom in</button>
+          <button id="zoom_out" type="button" class="zoom_button btn  ">Zoom out</button>
           <!-- <button type="button" class="test_button btn btn-test ">Alg Test</button> -->
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" value="">
+              Disable hover tip
+            </label>
+          </div>
 
 
         </div>
