feat: add a checkbox to diasble/enable svg zoom

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -32,7 +32,6 @@
     <div class="row">
       <!-- <div class="col-xs-12 col-sm-9"> -->
       <div class="col-md-10">
-
         <div id="{{ figure_id }}">
           {{ background_svg }}
         </div>
@@ -75,6 +74,12 @@
           <button id="zoom_in" type="button" class="zoom_button btn">Zoom in</button>
           <button id="zoom_out" type="button" class="zoom_button btn  ">Zoom out</button>
           <!-- <button type="button" class="test_button btn btn-test ">Alg Test</button> -->
+          <div class="checkbox">
+            <label>
+              <input id="cb-zoom" type="checkbox" value="">
+              Disable map zoom
+            </label>
+          </div>
           <div class="checkbox">
             <label>
               <input type="checkbox" value="">
