feat: disable hover tooltip(not finished)

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -77,12 +77,12 @@
           <div class="checkbox">
             <label>
               <input id="cb-zoom" type="checkbox" value="">
-              Disable map zoom
+              Disable mouse zoom
             </label>
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox" value="">
+              <input id="cb-tip" type="checkbox" value="">
               Disable hover tip
             </label>
           </div>
