fix: toolbar description

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -56,7 +56,7 @@
           <div class="checkbox">
             <label>
               <input type="checkbox" value="">
-              Disable Animation
+              Enable Animation
             </label>
           </div>
           <button type="button" class="animate_button btn btn-warning ">Downstream Nodes</button>
