output complete ap model with fixed postion

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -1,33 +1,37 @@
+<div class="container-fluid">
+  <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+          <i class="fa fa-comments-o"></i>
+          VisMap
+        </a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="/">Document</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
   <div class="row row-offcanvas row-offcanvas-right">
 
-    <div class="navbar navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">
-            <i class="fa fa-comments-o"></i>
-            VisMap
-          </a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-          </ul>
-          <ul class="nav navbar-nav">
-            <li><a href="/">Document</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/login">Login</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+
 
     <div class="row">
       <!-- <div class="col-xs-12 col-sm-9"> -->
