--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -1,28 +1,64 @@
-<div class="navbar navbar-static-top" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">
-      <i class="fa fa-comments-o"></i>
-      VisMap
-    </a>
+<nav id="navarea" class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+        aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Project name</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Map
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a>Save Map JSON</a></li>
+            <li><a>Save as SVG</a></li>
+            <li><a>Save as PNG</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">Nav header</li>
+            <li><a href="#">Separated link</a></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            aria-expanded="false">Model
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a>Load COBRA Model</a></li>
+            <li><a>Render Model</a></li>
+            <li><a>Clear Model</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            aria-expanded="false">View
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a>Zoom In</a></li>
+            <li><a>Zoom Out</a></li>
+            <li><a>Enable Mouse Zoom</a></li>
+            <li><a>Disable Hover Tip</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Document</a></li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+        <li><a href="../navbar-static-top/">Static top</a></li>
+        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+      </ul>
+    </div>
+    <!--/.nav-collapse -->
   </div>
-  <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
-    </ul>
-    <ul class="nav navbar-nav">
-      <li><a href="/">Document</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/login">Login</a></li>
-    </ul>
-  </div>
-</div>
+  <!--/.container-fluid -->
+</nav>
 
 <div class="container-fluid">
   <div class="row">
