--- a/templates/network_style.css
+++ b/templates/network_style.css
@@ -72,6 +72,11 @@ svg {
   z-index: 5;
 }
 
-#navarea {
-  margin-bottom: 60px;
+#content-area {
+  margin-top: 100px;
+}
+
+#vismap-sidebar {
+    background-color: #f5f5f5;
+
 }
