--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -1,4 +1,4 @@
-<nav id="navarea" class="navbar navbar-default">
+<nav id="nav-area" class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -60,7 +60,7 @@
   <!--/.container-fluid -->
 </nav>
 
-<div class="container-fluid">
+<div id="content-area" class="container-fluid">
   <div class="row">
     <!-- <div class="col-xs-12 col-sm-9"> -->
     <div class="col-md-9 col-md-offset-1">
@@ -68,7 +68,7 @@
     </div>
 
     <!-- <div id="d3flux001_options" class="col-xs-6 col-sm-3 sidebar-offcanvas"> -->
-    <div id="d3flux001_options" class="col-md-2 sidebar">
+    <div id="vismap-sidebar" class="col-md-2 sidebar">
 
       <div class="btn-group-vertical" role="group" aria-label="btn-group-vertical">
         <h4>Search</h4>
