--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand">VisMap</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -50,9 +50,7 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-        <li><a href="../navbar-static-top/">Static top</a></li>
-        <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
