--- a/templates/network_style.css
+++ b/templates/network_style.css
@@ -77,6 +77,14 @@ svg {
 }
 
 #vismap-sidebar {
-    background-color: #f5f5f5;
-
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border-right: 1px solid #eee;;
 }
