fix: Buttons not working

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -87,13 +87,13 @@
             Enable Animation
           </label>
         </div>
-        <button type="button" class="animate_button btn btn-primary ">Downstream Nodes</button>
+        <button type="button" id="btn_downstream" class="btn btn-primary ">Downstream Nodes</button>
 
         <h4>Custom</h4>
-        <button type="button" class="reactionbutton btn btn-success">Show Reaction Nodes</button>
-        <button type="button" class="path_button btn btn-danger">Disable Path Color</button>
+        <button type="button" id="btn_reactopm" class="btn btn-success">Show Reaction Nodes</button>
+        <button type="button" id="btn_path-color" class="btn btn-danger">Disable Path Color</button>
         <!-- <button type="button" class="marker_button btn btn-warning ">Select Marker</button> -->
-        <button type="button" class="reset_button btn btn-warning ">Reset</button>
+        <button type="button" id="btn_reset" class="btn btn-warning ">Reset</button>
         <button id="zoom_in" type="button" class="zoom_button btn">Zoom in</button>
         <button id="zoom_out" type="button" class="zoom_button btn  ">Zoom out</button>
         <!-- <button type="button" class="test_button btn btn-test ">Alg Test</button> -->
