--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -90,7 +90,7 @@
         <button type="button" id="btn_downstream" class="btn btn-primary ">Downstream Nodes</button>
 
         <h4>Custom</h4>
-        <button type="button" id="btn_reactopm" class="btn btn-success">Show Reaction Nodes</button>
+        <button type="button" id="btn_reaction" class="btn btn-success">Show Reaction Nodes</button>
         <button type="button" id="btn_path-color" class="btn btn-danger">Disable Path Color</button>
         <!-- <button type="button" class="marker_button btn btn-warning ">Select Marker</button> -->
         <button type="button" id="btn_reset" class="btn btn-warning ">Reset</button>
