Update js and css template

--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -16,13 +16,13 @@
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Map
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a>Save Map JSON</a></li>
-            <li><a>Save as SVG</a></li>
-            <li><a>Save as PNG</a></li>
+            <li class="dropdown-header">Export</li>
+            <li><a id="menu_save-json" class="menu_item">Save Map JSON</a></li>
+            <li><a class="menu_item">Save as SVG</a></li>
+            <li><a class="menu_item">Save as PNG</a></li>
             <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
+            <li class="dropdown-header">General</li>
+            <li><a class="menu_item">Clear Map</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -30,9 +30,9 @@
             aria-expanded="false">Model
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a>Load COBRA Model</a></li>
-            <li><a>Render Model</a></li>
-            <li><a>Clear Model</a></li>
+            <li><a class="menu_item">Load COBRA Model</a></li>
+            <li><a class="menu_item">Render Model</a></li>
+            <li><a class="menu_item">Clear Model</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -40,10 +40,10 @@
             aria-expanded="false">View
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a>Zoom In</a></li>
-            <li><a>Zoom Out</a></li>
-            <li><a>Enable Mouse Zoom</a></li>
-            <li><a>Disable Hover Tip</a></li>
+            <li><a class="menu_item">Zoom In</a></li>
+            <li><a class="menu_item">Zoom Out</a></li>
+            <li><a class="menu_item">Enable Mouse Zoom</a></li>
+            <li><a class="menu_item">Disable Hover Tip</a></li>
           </ul>
         </li>
         <li><a href="#">Document</a></li>
