--- a/templates/output_template.html
+++ b/templates/output_template.html
@@ -46,7 +46,7 @@
             <li><a class="menu_item">Disable Hover Tip</a></li>
           </ul>
         </li>
-        <li><a href="#">Document</a></li>
+        <li><a href="https://pstjohn.github.io/d3flux/">Document</a></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
